Bug 172263 - Missing bookmark boundary marks and labels at fixed line height paragraph formatting
Summary: Missing bookmark boundary marks and labels at fixed line height paragraph for...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: Writer-UX Bookmarks
  Show dependency treegraph
 
Reported: 2026-05-28 15:08 UTC by László Németh
Modified: 2026-06-10 17:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
normal and fixed line height (101.64 KB, image/png)
2026-05-28 15:17 UTC, László Németh
Details
tdf172263_fixed_line_height.odt: test document (12.79 KB, application/vnd.oasis.opendocument.text)
2026-05-28 15:31 UTC, László Németh
Details
tdf172263.odt: test document (13.43 KB, application/vnd.oasis.opendocument.text)
2026-05-29 10:16 UTC, László Németh
Details
screenshots (before and after the fix) (441.31 KB, application/pdf)
2026-05-29 10:19 UTC, László Németh
Details
field_shadings.odt: test document to show default gray, custom orange, and custom transparent (white) field shadings (12.94 KB, application/vnd.oasis.opendocument.text)
2026-06-10 17:46 UTC, László Németh
Details
field_shadings.png: disabled field shadings and enabled with default, custom orange and custom white, i.e. disabled field shadings (67.88 KB, image/png)
2026-06-10 17:50 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2026-05-28 15:08:13 UTC
Description:
At fixed line height paragraph setting, clipping before and after the text line removes near completely the brackets of the bookmark boundary marks, also custom labels of the RDF bookmark metadata annotations. (See it on the attached screenshot).

Note: it is not a regression.

Steps to Reproduce:
Open the test document.

Actual Results:
Brackets and labels are missing or only partially visible.

Expected Results:
Visible brackets and labels at fixed line height.


Reproducible: Always


User Profile Reset: No

Additional Info:
The test document uses both 10 pt font height and 10 pt fixed line height.

See also  Bug 45589, Bug 150717 and Bug 163309.
Comment 1 László Németh 2026-05-28 15:17:41 UTC
Created attachment 207241 [details]
normal and fixed line height

left: visible brackets and labels

right (fixed line height: not or partially visible brackets and labels
Comment 2 Commit Notification 2026-05-28 15:26:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ead4303c2d37dfb2d278cfc178d53a067e443d26

tdf#172263 tdf#163309 sw: fix bookmark boundary mark/label visibility

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2026-05-28 15:31:55 UTC
Created attachment 207242 [details]
tdf172263_fixed_line_height.odt: test document

To show bookmark boundary marks, enable 1) Tools->Options...->LibreOffice Writer->Formatting Aids->Bookmarks and 2) View->Field Shadings.
Comment 4 László Németh 2026-05-29 10:16:14 UTC
Created attachment 207260 [details]
tdf172263.odt: test document
Comment 5 László Németh 2026-05-29 10:19:16 UTC
Created attachment 207261 [details]
screenshots (before and after the fix)
Comment 6 Commit Notification 2026-06-09 23:25:11 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/65fe9f853e1f9db1e8a4b529bdd4fcbc6f824964

tdf#163309 tdf#172263 sw: set white metadata shadings transparent

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 László Németh 2026-06-10 17:46:24 UTC
Created attachment 207411 [details]
field_shadings.odt: test document to show default gray, custom orange, and custom transparent (white) field shadings
Comment 8 László Németh 2026-06-10 17:50:46 UTC
Created attachment 207412 [details]
field_shadings.png: disabled field shadings and enabled with default, custom orange and custom white, i.e. disabled field shadings