tdf#172263 tdf#163309 sw: fix bookmark boundary mark/label visibility

Editing the line, using fixed line height or using metadata
fields resulted broken or completely invisible bookmark boundary
marks and metadata labels. Fix these, and improve not only
visualization, but readability of the metadata labels using auto
color label text and improved design.

Details:

tdf#163309 introduced bookmark boundary mark labels, visualizing
boundaries and metadata labels of arbitrary text parts (not only
text portions inside the paragraph, like metadata fields) using
custom metadata colors, keeping also the WYSIWYG text layout
(metadata fields has custom prefix/suffix support, but that
breaks the text layout).

Focusing on the metadata visualization, this patch fixes the
appearance and readability of the metadata annotations and their
custom labels both stored in RDF, but some of the changes added
improved visibility for the plain bookmark boundary marks, too
(they weren't visible in line starting and ending positions at
fixed line height paragraph settings).

= Fields and bookmarks on the same position =

Bookmark boundary marks with metadata visualization are visible
again without enabled field shading, to avoid of the case, when
shading of the RDF metadata fields hid the bookmark boundary
marks in the same position.

= Fix bad clipping at fixed line height =

If bookmark boundary marks are enabled, disable extra clipping of
the text lines at fixed line height:

– to show bookmark boundary marks in line starting and ending
  positions (don't clip them);

– to show the upper part of the brackets (don't clip it).

= Fix editing and overlapping boundary marks =

Use text-size brackets at bookmarks with RDF metadata, not higher
ones, also move the labels nearer to the text as much as possible
to avoid of the different artifacts: editing didn't update the
line completely, overlapping boundary marks, etc.

= New label design with improved readability =

Use thin black letters on gray background, or custom color
background defined in the RDF metadata. This way no need to use
thick letters, as before for the colored text: the black text is
uniformly readable (except on very dark background color – a
future fix to do. Note: simply replacing COL_BLACK with COL_AUTO
doesn't work, because it uses the text background, not the label
background).

Join the labels with the brackets, creating a big labelled
bracket.

Add narrow spaces before and after the label text to get better
visibility in the case of the short labels.

Change to start-bottom labeling, i.e. replace the positions of
the labels: put the fist label under the text at the opening
bracket, and the second label over the text at the closing
bracket, because the annotated headings and proper names always
start with uppercase letters, but mostly end with lowercase ones,
so it is possible to fix editing etc. artifacts with much less
overlapping of the labels and the text.

Enlarge the font size limit for the annotations (12 pt).

Follow-up to commit 412e0ab26618c38f548c340f85ef63bbe73ef6b2
"tdf#150717 sw RDF metadata: add custom color bookmark boundary
marks", commit a4af3948e9212ef46149f906e5880f77693cca4b
"tdf#163309 sw: clean-up bookmark boundary mark labels", and
commit 3393e52be0900ad63ceee0a43cd44d473ec8248a "tdf#163309 sw:
show rdf:type as labels on bookmark boundary marks".

(cherry-pick also in ead4303c2d37dfb2d278cfc178d53a067e443d26)

Signed-off-by: László Németh <nemeth@numbertext.org>
Change-Id: I5f4acb845e9688cc2ef665fcae0f0c7799bd8e8b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205764
Tested-by: Jenkins
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/3755
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>